--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,40 +1,10 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/maven,eclipse,intellij+all,angular
-# Edit at https://www.toptal.com/developers/gitignore?templates=maven,eclipse,intellij+all,angular
-
-### Angular ###
-## Angular ##
-# compiled output
-dist/
-tmp/
-app/**/*.js
-app/**/*.js.map
-
-# dependencies
-node_modules/
-bower_components/
-
-# IDEs and editors
-
-# misc
-.sass-cache/
-connect.lock/
-coverage/
-libpeerconnection.log/
-npm-debug.log
-testem.log
-typings/
-
-# e2e
-e2e/*.js
-e2e/*.map
-
-# System Files
-.DS_Store/
+# Created by https://www.toptal.com/developers/gitignore/api/java,maven,eclipse,intellij+all
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,maven,eclipse,intellij+all
 
 ### Eclipse ###
 .metadata
 bin/
+tmp/
 *.tmp
 *.bak
 *.swp
@@ -108,6 +78,9 @@ local.properties
 .idea/**/dictionaries
 .idea/**/shelf
 
+# AWS User-specific
+.idea/**/aws.xml
+
 # Generated files
 .idea/**/contentModel.xml
 
@@ -158,6 +131,9 @@ atlassian-ide-plugin.xml
 # Cursive Clojure plugin
 .idea/replstate.xml
 
+# SonarLint plugin
+.idea/sonarlint/
+
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
@@ -171,19 +147,39 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 ### Intellij+all Patch ###
-# Ignores the whole .idea folder and all .iml files
-# See https://github.com/joeblau/gitignore.io/issues/186 and https://github.com/joeblau/gitignore.io/issues/360
+# Ignore everything but code style settings and run configurations
+# that are supposed to be shared within teams.
 
+.idea/*
 
-# Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-249601023
+!.idea/codeStyles
+!.idea/runConfigurations
 
-*.iml
-modules.xml
-.idea/misc.xml
-*.ipr
+### Java ###
+# Compiled class file
+*.class
 
-# Sonarlint plugin
-.idea/sonarlint
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
 
 ### Maven ###
 target/
@@ -198,9 +194,14 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
-# End of https://www.toptal.com/developers/gitignore/api/maven,eclipse,intellij+all,angular
+# Eclipse m2e generated files
+# Eclipse Core
 .project
-api/.classpath
-boot/.classpath
-model/.classpath
-ws/.classpath
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
+
+# End of https://www.toptal.com/developers/gitignore/api/java,maven,eclipse,intellij+all
+
+#HSQLDB
+templateDB.lck
+templateDB.properties
