--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -13,13 +13,19 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>11</java.version>
-    <hsqldatabase.path>src/main/db</hsqldatabase.path>
-    <database.url>jdbc:hsqldb:hsql://localhost:9013/templateDB</database.url>
-    <hsqldb.version>2.3.4</hsqldb.version>
+    <postgresql.version>42.3.8</postgresql.version>
+    <database.url>jdbc:postgresql://45.84.210.174:65432/2023_BFS_3_G3</database.url>
     <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
   </properties>
+
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>${postgresql.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
@@ -43,11 +49,6 @@
         <groupId>com.campusdual</groupId>
         <artifactId>backend-ws</artifactId>
         <version>1.0.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.hsqldb</groupId>
-        <artifactId>hsqldb</artifactId>
-        <version>${hsqldb.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
