--- a/backend/backend-boot/src/main/resources/application.yml
+++ b/backend/backend-boot/src/main/resources/application.yml
@@ -27,7 +27,7 @@ ontimize:
          upper-like: true
    security:
       mode: default
-      ignore-paths: /app/**
+      ignore-paths: /app/**, /app/login/register/new
       role-information-service:
          role-repository: UserRoleDao
          role-name-column: rolename
