Add Dockerfiles for DB, backend and frontend. Adapt SLQ dump to restore DB. Adapt backend and frontend apps to run from docker

--- a/backend/backend-boot/src/main/resources/application.yml
+++ b/backend/backend-boot/src/main/resources/application.yml
@@ -56,7 +56,7 @@ ontimize:
 server:
    servlet:
       context-path: /whegym/services/rest
-   port: 8080
+   port: 33333
    tomcat:
       uri-encoding: UTF-8
    compression:
@@ -65,7 +65,7 @@ server:
 spring:
    datasource:
       driver-class-name: org.postgresql.Driver
-      jdbc-url: jdbc:postgresql://45.84.210.174:65432/2023_BFS_3_G3
+      jdbc-url: jdbc:postgresql://db:5432/2023_BFS_3_G3
       username: 2023_BFS_3_G3
       password: b2f34VKzTvt2
    main:
